Fix minor spacing issue with most page's copyright notice

--- a/public/index.css
+++ b/public/index.css
@@ -399,6 +399,7 @@ a.statusYellow {
 }
 
 .silentFooter {
+    width: 100%;
     color: #666;
 }
 
